apps/lychee/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 128m
  name: lychee
  namespace: lychee
spec:
  rules:
    - host: photos.rocketops.io
      http:
        paths:
          - backend:
              serviceName: lychee
              servicePort: 80
            path: /
  tls:
  - secretName: tls-prod-cert
    hosts:
    - photos.rocketops.io
